--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,13 @@
 * {
     box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+    margin: 0 !;
+    padding: 0;
     font-family: 'Josefin Sans', sans-serif;
+}
+
+body {
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 p {
@@ -14,6 +19,7 @@ p {
     justify-content: space-between;
     align-items: center;
     background-color: #3f704d;
+    width: 100%;
 }
 
 .header-logo {
@@ -47,7 +53,7 @@ p {
     border-width: 2px;
     border-color: darkgrey;
     border-style: solid;
-    margin: 20px 50px;
+    margin: 20px 50px 20px 10px;
     width: 30%;
    background-color: #FAF9F6;
 }
@@ -105,8 +111,8 @@ input {
 
 .container img{
     border-radius: 10px;
-    height: 300px;
-    margin-left: 50px;
+    width: 40%;
+    /* margin-left: 50px; */
     align-items: center;
 }
 
@@ -125,11 +131,65 @@ button:hover {
     color: #3f704d;
 }
 
-@media only screen and (max-width: 600px) {
-    div.container {
+.button-holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+html {
+    overflow-x: hidden; 
+}
+
+@media screen and (max-width: 425px) {
+    .content p {
+        font-size: 12px;
+        margin: 20px;
+    }
+    .form-container h3 {
+        font-size: 18px !important;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .header-logo {
+        font-size: 24px;
+    }
+    body {
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+
+    .content p {
+        font-size: 14px !important;
+    }
+
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      max-width: 100% !important;
+    }
+
+    .container h1 {
+        font-size: 24px;
+    }
+
+    .form-container {
+        width: 90% !important;
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+    }
+
+    .form-container h3 {
+        font-size: 24px;
     }
 }
