--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0 !;
     padding: 0;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Della Respira', serif;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 }
 
 p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .header {
@@ -41,7 +41,7 @@ p {
     flex-direction: column;
     align-items: center;
 }
-.form {
+form {
     border-radius: 30px;
     margin: 20px 20px;
     display: flex;
@@ -54,9 +54,9 @@ p {
     border-color: darkgrey;
     border-style: solid;
     margin: 20px 50px 20px 10px;
-    width: 30%;
    background-color: #FAF9F6;
 }
+
 
 input {
     width: 100%;
@@ -75,6 +75,15 @@ input {
     font-size: 36px;
     font-weight: extra-bold;
     color: #3f704d;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 10px;
+}
+
+.container h2 {
+    font-size: 28px;
+    color: black;
     margin-top: 20px;
     margin-left: 50px;
     margin-right: 50px;
@@ -181,6 +190,16 @@ html {
 
     .container h1 {
         font-size: 24px;
+    }
+
+    .container h2 {
+        font-size: 20px;
+    }
+
+    .container img {
+        width: 90% !important;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .form-container {
