--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,6 +40,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 form {
     border-radius: 30px;
@@ -210,5 +211,9 @@ html {
 
     .form-container h3 {
         font-size: 24px;
+    }
+
+    .content {
+        margin-bottom: 10px;
     }
 }
